--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,7 @@
-body {
-    background-color: rgb(110, 190, 201);
-    font-family: Arial, Helvetica, sans-serif;
-}
-  
-h4 {
-    text-align: center;
-}
-  
 .mt-5 {
     position: absolute;
     bottom: 0em;
-    right: 30em;
+    right: 62.9rem;
 }
 
 body {
@@ -28,9 +19,19 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+#output {
+    color:purple;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 h1 {
     text-align: center;
     color: yellow;
+}
+
+h4 {
+    text-align: center;
 }
 
 input[type="text"] {
@@ -63,17 +64,3 @@ footer {  /* name and class information */
     color: red;
 }
 
-#fullOutput {
-    display: flex;
-    flex-wrap: wrap;
-    color: yellow
-  }
-  
-#textOutput {
-    flex: 1 1 auto;
-    margin-right: 20px; 
-  }
-  
-#imageOutput {
-    flex: 0 0 auto;
-  }
